# memex-twos-mcp

./: .flake8  .gitignore  .llm_config.yaml.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFECTS.md  GITHUB_DEPLOYMENT_PLAN.md  LICENSE  MCP_SETUP.md  PRE_RELEASE_CHECKLIST.md  PROMPT_GITHUB_DEPLOYMENT.md  PUBLISHING.md  README.md  RELEASE_v2.0.0.md  TEST_PROMPTS.md  config.example.json  config.example.yaml  pyproject.toml  requirements.txt  setup_wizard.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
data/sample/: README.md  sample_export.md
docs/: DATA_GROOMING_PROMPT.md  cca-implementation-plan.md  phase-4-execution-plan.md  phase-5-execution-plan.md  phase-6-execution-plan.md  v2-implementation-summary.md  v2-plan.md
schema/: README.md  schema.sql
scripts/: analyze_data.py  build_all.py  build_list_metadata.py  build_month_summaries.py  build_threads.py  build_timepacks.py  classify_entities.py  create_sample_data.py  db_count.py  generate_mcp_config.py  groom_data.py  llm_config.py  llm_utils.py  load_to_sqlite.py  migrate_add_embeddings.py  migrate_add_incremental.py  migrate_add_list_semantics.py  setup_wizard.py  validate_setup.py
scripts/llm_providers/: __init__.py  anthropic_api.py  claude_cli.py  factory.py  lmstudio.py
src/: convert_to_json.py
src/memex_twos_mcp/: __init__.py  cache.py  config.py  database.py  embeddings.py  server.py
src/memex_twos_mcp/tools/: __init__.py
tests/: __init__.py  test_build_all.py  test_build_month_summaries.py  test_build_threads.py  test_build_timepacks.py  test_cache.py  test_converter.py  test_database.py  test_embeddings.py  test_entity_extraction.py  test_hybrid_search.py  test_incremental.py  test_server.py
