[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memex-twos-mcp"
version = "0.1.0"
description = "MCP server for querying personal task data from Twos app exports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.8.2",
    "sentence-transformers>=2.0.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ner = [
    "spacy>=3.7.0,<4.0.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
memex-twos-mcp = "memex_twos_mcp.server:run"
